--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "cf-worker-ws-dev"
+name = "uing"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 # node_compat = true
@@ -6,6 +6,6 @@ workers_dev = true
 
 [vars]
 # PROXYIP = "45.60.186.91"
-UUID = "80e73d4e-e153-43f6-ad7e-360d96aec79e"
+UUID = "2126be31-a337-4768-a85d-8066c380c7af"
 # SOCKS5 = "127.0.0.1:1080"
 # SOCKS5_RELAY = "true"
